Potential section + section spacing fix.

--- a/_sass/_page-sections.sass
+++ b/_sass/_page-sections.sass
@@ -9,7 +9,7 @@
     padding: ms(5)
 
   & + &
-    padding-top: ms(2)
+    padding-top: 0
 
   &__header
     text-align: center
